# firewire-image-io

./: .gitignore  LICENSE  README.md  README.org  firewire-image-io.cabal  stack.yaml
examples/: Canny.hs  accelerate-opencv.hs  accelerate.hs  openCV.hs
src/CV/Image/: IO.hs
src/Data/Array/Accelerate/IO/: Firewire.hs
src/System/Firewire/: IO.hs
