name:                firewire-image-io
version:             0.0.1
synopsis:            Parses firewire data into various Haskell data structures
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Rob Stewart
maintainer:          robstewart57@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     CV.Image.IO
                     , Data.Array.Accelerate.IO.Firewire
  build-depends:       base >=4.8 && <4.9
                     , CV >= 0.4.0.0 
                     , bindings-dc1394 >= 0.2.1
                     , enumerator >= 0.4.20
                     , mtl >= 2.2.1
                     , accelerate >= 0.15.1.0
                     , accelerate-io >= 0.15.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable firewire-opencv-example
  hs-source-dirs:      examples
  main-is:             openCV.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , firewire-image-io
                     , bindings-dc1394 >= 0.2.1
                     , enumerator >= 0.4.20
  default-language:    Haskell2010

executable firewire-accelerate-example
  hs-source-dirs:      examples
  main-is:             accelerate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , firewire-image-io
                     , bindings-dc1394 >= 0.2.1
                     , enumerator >= 0.4.20
                     , accelerate >= 0.15.1.0
                     , accelerate-cuda >= 0.15.1.0
                     , accelerate-io >= 0.15.1.0
                     , repa >= 3.4.0.2
                     , repa-io >= 3.4.0.2
  default-language:    Haskell2010
